--- a/index.html
+++ b/index.html
@@ -158,11 +158,12 @@
 
 
     <div class="modal-overlay fixed top-0 z-50 bg-black/50 text-white w-[100vw] h-[100vh] flex items-center justify-center">
-        <div class="modal-add-book w-3/4 h-5/6 bg-white text-black">
+        <div class="modal-add-book w-3/4 h-5/6 bg-white text-black relative">
             <div class="modal-header h-1/6 p-2 px-4 flex items-center">
                 <h1 class="text-2xl font-bold">Tambahkan Buku</h1>
+                <div class="close-button bg-red-500 text-white p-2 px-4 absolute rounded-b-xl top-0 right-0 mr-4">X</div>
             </div>
-            <div class="modal-contents h-5/6 px-4 overflow-y-auto">
+            <div class="modal-contents h-5/6 px-4 pb-4 overflow-y-auto">
                 <label for="input-nama-buku" class="block">Nama</label>
                 <input type="text" name="input-nama-buku" id="input-nama-buku" class="block p-2 border w-full mb-4">
 
@@ -171,6 +172,15 @@
 
                 <label for="input-penulis-buku" class="block">Penulis</label>
                 <input type="text" name="input-penulis-buku" id="input-penulis-buku" class="block p-2 border w-full mb-4">
+
+                <label for="input-terbit-buku">Tahun Terbit</label>
+                <input type="number" min="1800" max="3000" step="1" value="2022" id="input-terbit-buku" class="block p-2 border w-full mb-4">
+
+                <input type="checkbox" name="input-selesai-buku" id="input-selesai-buku">
+                <label for="input-selesai-buku">Selesai Baca?</label>
+                
+                <button class="block w-full p-2 bg-black text-white mt-4">Simpan</button>
+
             </div>
         </div>
     </div>
