--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
                         <button class="bg-red-600 border rounded text-white p-2 ml-auto">
                             <i class="fa fa-trash"></i>
                         </button>
+                        <button class="bg-red-600 border rounded text-white p-2 ml-auto">
+                            <i class="fa fa-trash"></i>
+                        </button>
                     </div>
                 </div>
             </div>
