Otw Submit, Fixing Logic of CRUD

--- a/index.html
+++ b/index.html
@@ -53,113 +53,7 @@
         <p class="px-4">Menampilkan Seluruh Koleksi </p>
 
         <div class="content-wrapper p-4 mb-16 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-            <div class="card border">
-                <img src="./assets/image/book-placeholder.jpg" alt="book-image" class="h-[150px] w-full object-cover">
-                <div class="card-description p-2">
-                    <p class="font-medium">Ini Title</p>
-                    <p class="">Auhtor - Tahun</p>
-                    <div class="description-details flex">
-                        <div class="p-2 bg-green-500 border rounded text-white">Selesai</div>
-                        <button class="bg-red-600 border rounded text-white p-2 ml-auto">
-                            <i class="fa fa-trash"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="card border">
-                <img src="./assets/image/book-placeholder.jpg" alt="book-image" class="h-[150px] w-full object-cover">
-                <div class="card-description p-2">
-                    <p class="font-medium">Ini Title</p>
-                    <p class="">Auhtor - Tahun</p>
-                    <div class="description-details flex">
-                        <div class="p-2 bg-black border rounded text-white">Selesai</div>
-                        <button class="bg-red-600 border rounded text-white p-2 ml-auto">
-                            <i class="fa fa-trash"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="card border">
-                <img src="./assets/image/book-placeholder.jpg" alt="book-image" class="h-[150px] w-full object-cover">
-                <div class="card-description p-2">
-                    <p class="font-medium">Ini Title</p>
-                    <p class="">Auhtor - Tahun</p>
-                    <div class="description-details flex">
-                        <div class="p-2 bg-black border rounded text-white">Selesai</div>
-                        <button class="bg-red-600 border rounded text-white p-2 ml-auto">
-                            <i class="fa fa-trash"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="card border">
-                <img src="./assets/image/book-placeholder.jpg" alt="book-image" class="h-[150px] w-full object-cover">
-                <div class="card-description p-2">
-                    <p class="font-medium">Ini Title</p>
-                    <p class="">Auhtor - Tahun</p>
-                    <div class="description-details flex">
-                        <div class="p-2 bg-black border rounded text-white">Selesai</div>
-                        <button class="bg-red-600 border rounded text-white p-2 ml-auto">
-                            <i class="fa fa-trash"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="card border">
-                <img src="./assets/image/book-placeholder.jpg" alt="book-image" class="h-[150px] w-full object-cover">
-                <div class="card-description p-2">
-                    <p class="font-medium">Ini Title</p>
-                    <p class="">Auhtor - Tahun</p>
-                    <div class="description-details flex">
-                        <div class="p-2 bg-black border rounded text-white">Selesai</div>
-                        <button class="bg-red-600 border rounded text-white p-2 ml-auto">
-                            <i class="fa fa-trash"></i>
-                        </button>
-                        <button class="bg-red-600 border rounded text-white p-2 ml-auto">
-                            <i class="fa fa-trash"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="card border">
-                <img src="./assets/image/book-placeholder.jpg" alt="book-image" class="h-[150px] w-full object-cover">
-                <div class="card-description p-2">
-                    <p class="font-medium">Ini Title</p>
-                    <p class="">Auhtor - Tahun</p>
-                    <div class="description-details flex">
-                        <div class="p-2 bg-black border rounded text-white">Selesai</div>
-                        <button class="bg-red-600 border rounded text-white p-2 ml-auto">
-                            <i class="fa fa-trash"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="card border">
-                <img src="./assets/image/book-placeholder.jpg" alt="book-image" class="h-[150px] w-full object-cover">
-                <div class="card-description p-2">
-                    <p class="font-medium">Ini Title</p>
-                    <p class="">Auhtor - Tahun</p>
-                    <div class="description-details flex">
-                        <div class="p-2 bg-black border rounded text-white">Selesai</div>
-                        <button class="bg-red-600 border rounded text-white p-2 ml-auto">
-                            <i class="fa fa-trash"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="card border">
-                <img src="./assets/image/book-placeholder.jpg" alt="book-image" class="h-[150px] w-full object-cover">
-                <div class="card-description p-2">
-                    <p class="font-medium">Ini Title</p>
-                    <p class="">Auhtor - Tahun</p>
-                    <div class="description-details flex">
-                        <div class="p-2 bg-black border rounded text-white">Selesai</div>
-                        <button class="bg-red-600 border rounded text-white p-2 ml-auto">
-                            <i class="fa fa-trash"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
+            <!-- Card -->
         </div>
 
         <button class="fixed bottom-4 right-4 bg-black text-white rounded p-3 show-modal">
@@ -167,7 +61,7 @@
         </button>
 
         <div
-            class="fixed bottom-4 right-4 bg-green-600 notification-container p-2 h-24 w-min-h-48 rounded text-white border border-white fixed hidden">
+            class="fixed bottom-4 right-4 bg-green-600 notification-container p-2 h-24 w-min-h-48 rounded text-white border border-white fixed hidden z-40">
             <div class="notification-container-header">
                 <h1 class="font-bold">Ini adalah header</h1>
             </div>
@@ -210,8 +104,10 @@
                     <input type="checkbox" name="input-selesai-buku" id="input-selesai-buku">
                     <label for="input-selesai-buku">Selesai Baca?</label>
 
-                    <input type="submit" class="block w-full p-2 bg-black text-white mt-4" id="button-simpan-buku"
-                        value="Simpan">
+                    <button type="button" class="block w-full p-2 bg-black text-white mt-4"
+                        id="button-simpan-buku">Simpan</button>
+                    <button type="button" class="block w-full p-2 bg-black text-white mt-4"
+                        id="button-edit-buku">Edit</button>
                 </form>
 
 
