--- a/index.html
+++ b/index.html
@@ -31,19 +31,12 @@
         </nav>
     </header>
     <main>
-        <fieldset class="tools m-4 border min-h-[25vh] flex flex-col p-4">
-            <legend>Tools</legend>
+        <fieldset class="tools m-4 border border-black/20 min-h-[25vh] flex flex-col p-4 bg-black/20">
+            <legend class="bg-black p-2 px-6 text-white">Tools</legend>
             <label for="nama-buku">
                 Cari Nama Buku
             </label>
-            <input type="text" name="nama-buku" id="nama-buku" class="border p-2" placeholder="Nama Buku ...">
-
-            <label for="tipe-buku" class="mt-3">Tipe Buku</label>
-            <select id="tipe-buku" class="border p-2">
-                <option value="0">Semua</option>
-                <option value="1">Belum Selesai Dibaca</option>
-                <option value="2">Selesai Dibaca</option>
-            </select>
+            <input type="text" name="nama-buku" id="nama-buku" class="border border-black p-2" placeholder="Nama Buku ...">
 
             <div class="flex gap-4">
                 <button class="tools-filter w-1/2 md:w-1/4 p-2 mt-4 bg-black text-white">Filter</button>
@@ -52,8 +45,16 @@
         </fieldset>
         <p class="px-4">Menampilkan Seluruh Koleksi </p>
 
-        <div class="content-wrapper p-4 mb-16 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+        <div class="content-wrapper p-4 mb-16 grid grid-cols-1 md:grid-cols-2 gap-8">
             <!-- Card -->
+            <div class="content-belum-wrapper border border-black/50">
+                <p class="text-lg font-bold text-center bg-black text-white p-1">Belum Dibaca</p>
+                <div class="h-auto body max-h-[75vh] overflow-auto"></div>
+            </div>
+            <div class="content-sudah-wrapper border border-black/50">
+                <p class="text-lg font-bold text-center bg-black text-white p-1">Sudah Dibaca</p>
+                <div class="h-auto body max-h-[75vh] overflow-auto"></div>
+            </div>
         </div>
 
         <button class="fixed bottom-4 right-4 bg-black text-white rounded p-3 show-modal">
